Restructuring and C# components test.

--- a/WPF/Toolkit.WPF/Toolkit.WPF.csproj
+++ b/WPF/Toolkit.WPF/Toolkit.WPF.csproj
@@ -1,21 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
-		<Platform>x64</Platform>
+		<TargetFrameworks>net6.0-windows10.0.22000.0</TargetFrameworks>
 		<Platforms>x64</Platforms>
 		<UseWinUI>true</UseWinUI>
 		<UseWPF>true</UseWPF>
 		<RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
-		<RootNamespace>Toolkit.WPF</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.220727.1-experimental1" />
+		<Compile Update="Properties\Resources.Designer.cs">
+			<AutoGen>True</AutoGen>
+			<DesignTime>True</DesignTime>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+		<Compile Update="Properties\Settings.Designer.cs">
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Settings.settings</DependentUpon>
+			<DesignTimeSharedInput>True</DesignTimeSharedInput>
+		</Compile>
+		<EmbeddedResource Update="Properties\Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+		<None Include="Properties\Settings.settings">
+			<Generator>SettingsSingleFileGenerator</Generator>
+			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Libraries\Toolkit.Managed\Toolkit.Managed.csproj" />
+		<None Include="VisualStudioToolsManifest.xml" Pack="true" PackagePath="tools" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.220727.1-experimental1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Libraries\Toolkit.XamlHost\Toolkit.XamlHost.csproj" />
 	</ItemGroup>
 
 </Project>
