--- a/WPF/WinUI3Islands.WPF/WinUI3Islands.WPF.csproj
+++ b/WPF/WinUI3Islands.WPF/WinUI3Islands.WPF.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Custom Components\CSCustomComponents\CSCustomComponents.csproj" />
 	  <ProjectReference Include="..\Toolkit.WPF\Toolkit.WPF.csproj" />
 	</ItemGroup>
 
